--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "framer-motion": "^11.9.0",
     "react": "^18.3.1",
+    "react-before-after-slider-component": "^1.1.8",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
