--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "framer-motion": "^11.9.0",
     "react": "^18.3.1",
     "react-before-after-slider-component": "^1.1.8",
+    "react-calendar": "^5.0.0",
+    "react-datepicker": "^7.4.0",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.26.2",
