--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@vis.gl/react-google-maps": "^1.3.0",
     "formik": "^2.4.6",
     "framer-motion": "^11.9.0",
     "react": "^18.3.1",
