--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@vis.gl/react-google-maps": "^1.3.0",
+    "axios": "^1.7.7",
+    "firebase": "^10.14.1",
     "formik": "^2.4.6",
     "framer-motion": "^11.9.0",
     "react": "^18.3.1",
@@ -25,6 +27,7 @@
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.26.2",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
