--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-datepicker": "^7.4.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.3.1",
+    "react-google-recaptcha-v3": "^1.10.1",
     "react-leaflet": "^4.2.1",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.26.2",
